// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserFeedback calls trackEvent with feedback on modal Ok and renders thank you 1`] = `
<div
  className="__UserFeedback__"
>
  <Button
    block={false}
    className="feedback-button"
    data-test-id="sticky"
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(MessageOutlined) />}
    loading={false}
    onClick={[Function]}
    size="large"
    type="primary"
  >
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </Button>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okButtonProps={
      Object {
        "disabled": true,
      }
    }
    okText="Submit"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Your Feedback"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <ModalSuccessResult>
      <div>
        Thank you for your response.
      </div>
      <div>
        For further feedback, please
         
        <ExternalLink
          as="a"
          href="https://forms.gle/ZQi31GvXXHcsgXgM6"
        >
          take our survey
        </ExternalLink>
        .
      </div>
      <div>
        It takes around 5 minutes to complete.
      </div>
    </ModalSuccessResult>
  </Modal>
</div>
`;

exports[`UserFeedback renders 1`] = `
<div
  className="__UserFeedback__"
>
  <Button
    block={false}
    className="feedback-button"
    data-test-id="sticky"
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(MessageOutlined) />}
    loading={false}
    onClick={[Function]}
    size="large"
    type="primary"
  >
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </Button>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    maskTransitionName="fade"
    okButtonProps={
      Object {
        "disabled": undefined,
      }
    }
    okText="Submit"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Your Feedback"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <div
      className="mb4"
    >
      <div
        className="mb1"
      >
        What is your opinion of the new INSPIRE?
      </div>
      <div>
        <Rate
          character={<ForwardRef(StarFilled) />}
          onChange={[Function]}
          value={0}
        />
        <span
          className="ant-rate-text"
        />
      </div>
    </div>
    <div>
      <div
        className="mb1"
      >
        Would you like to add a comment?
      </div>
      <div>
        <TextArea
          onChange={[Function]}
          placeholder="Please give your feedback here"
          rows={5}
        />
      </div>
    </div>
  </Modal>
</div>
`;

exports[`UserFeedback renders when tracker is blocked 1`] = `
<div
  className="__UserFeedback__"
>
  <Button
    block={false}
    className="feedback-button"
    data-test-id="sticky"
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(MessageOutlined) />}
    loading={false}
    onClick={[Function]}
    size="large"
    type="primary"
  >
    <ResponsiveView
      min="sm"
      render={[Function]}
    />
  </Button>
  <Modal
    afterClose={[Function]}
    confirmLoading={false}
    maskTransitionName="fade"
    okButtonProps={
      Object {
        "disabled": true,
      }
    }
    okText="Submit"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Your Feedback"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <div
      className="mb4"
    >
      <Alert
        description={
          <React.Fragment>
            <p>
              To send us your feedback, please disable your adblocker or DoNotTrack and refresh the page.
            </p>
            <p>
              Alternatively, you could send us your feedback using the
               
              <ExternalLink
                as="a"
                href="https://forms.gle/ZQi31GvXXHcsgXgM6"
              >
                feedback form
              </ExternalLink>
               
              or by email at
               
              <ExternalLink
                as="a"
                href="mailto:feedback@inspirehep.net"
              >
                feedback@inspirehep.net
              </ExternalLink>
              .
            </p>
          </React.Fragment>
        }
        message="AdBlock detected"
        showIcon={true}
        type="warning"
      />
    </div>
    <div
      className="mb4"
    >
      <div
        className="mb1"
      >
        What is your opinion of the new INSPIRE?
      </div>
      <div>
        <Rate
          character={<ForwardRef(StarFilled) />}
          disabled={true}
          onChange={[Function]}
          value={0}
        />
        <span
          className="ant-rate-text"
        />
      </div>
    </div>
    <div>
      <div
        className="mb1"
      >
        Would you like to add a comment?
      </div>
      <div>
        <TextArea
          disabled={true}
          onChange={[Function]}
          placeholder="Please give your feedback here"
          rows={5}
        />
      </div>
    </div>
  </Modal>
</div>
`;
